tests/fixtures/invalid/divmod_list_dict.py
# Cannot call divmod() with List[int], Dict[str, int]
x = divmod([1, 2, 3], {"a": 1})
